--- a/colorChangingBox/index.html
+++ b/colorChangingBox/index.html
@@ -35,6 +35,8 @@
         <!-- this is the box -->
     </div>
 
-    <script src="app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="trial2.js"></script>
+    <!-- <script src="app.js"></script> -->
 </body>
 </html>
